force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__Child_RelationShipName__c.field-meta.xml
<CustomField>
    <fullName>refedge__Child_RelationShipName__c</fullName>
    <label>Child RelationShipName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>