force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__Filter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter</label>
    <referenceTo>refedge__Label__c</referenceTo>
    <relationshipLabel>Attribute Mappings</relationshipLabel>
    <relationshipName>Attribute_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>