force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__RelationShip_Name__c.field-meta.xml
<CustomField>
    <fullName>refedge__RelationShip_Name__c</fullName>
    <label>RelationShip Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>