force-app/main/default/objects/refedge__Attribute_Mapping__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Filter_Label_Name__c</columns>
    <columns>refedge__Attribute_Name__c</columns>
    <columns>refedge__Object__c</columns>
    <columns>refedge__Mapping_Type__c</columns>
    <columns>refedge__Field__c</columns>
    <columns>refedge__Auto_populate__c</columns>
    <columns>refedge__Auto_add__c</columns>
    <columns>refedge__Auto_delete__c</columns>
    <columns>refedge__Auto_update__c</columns>
    <columns>refedge__Inheritable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>